bug 1162821 - filter dns name collision records r=sworkman IGNORE IDL